--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Generates PDF from PUG templates in Express routes",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "eslint .",
+    "dev": "npm run lint && npm run test"
   },
   "repository": {
     "type": "git",
@@ -15,20 +17,25 @@
     "pug",
     "pdf"
   ],
-  "author": "Alistair Todd",
+  "author": "Ministry of Justice - Alistair Todd - ali@atodd.dev",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ministryofjustice/express-pug-pdf/issues"
   },
   "homepage": "https://github.com/ministryofjustice/express-pug-pdf#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "html-pdf": "^2.2.0",
     "path": "^0.12.7",
     "pug": "^2.0.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "express": "^4.17.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^5.0.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2"
