--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
   "homepage": "https://github.com/ministryofjustice/express-pug-pdf#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "html-pdf": "^2.2.0",
-    "path": "^0.12.7",
-    "pug": "^2.0.4"
+    "html-pdf": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -37,6 +35,8 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
+    "pug": "^2.0.4",
+    "nunjucks": "^3.2.0",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2"
   }
