--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
+    "test-report": "mocha --reporter mocha-junit-reporter",
     "lint": "eslint .",
     "dev": "npm run lint && npm run test"
   },
@@ -37,9 +38,10 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
-    "pug": "^2.0.4",
+    "mocha-junit-reporter": "^1.23.0",
     "nunjucks": "^3.2.0",
     "prettier": "^1.18.2",
+    "pug": "^2.0.4",
     "supertest": "^4.0.2"
   }
 }
