--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mocha": "^6.1.4",
     "mocha-junit-reporter": "^1.23.0",
     "nunjucks": "^3.2.0",
+    "pdf-parse": "^1.1.1",
     "prettier": "^1.18.2",
     "pug": "^2.0.4",
     "supertest": "^4.0.2"
