--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "template",
     "pdf",
     "pug",
-    "nunjucks"
+    "nunjucks",
+    "puppeteer"
   ],
   "author": "Ministry of Justice - Alistair Todd, Steven Bapaga",
   "license": "MIT",
@@ -27,7 +28,7 @@
   },
   "homepage": "https://github.com/ministryofjustice/express-template-to-pdf#readme",
   "dependencies": {
-    "pdf-puppeteer": "^1.1.6"
+    "puppeteer": "^1.18.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
